apps/helloworld/1.helloworld-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-pod
  labels:
    app.kubernetes.io/instance: helloworld
    app.kubernetes.io/name: helloworld
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: helloworld
      app.kubernetes.io/name: helloworld
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: helloworld
        app.kubernetes.io/name: helloworld
    spec:
      containers:
        - name: helloworld
          image: crccheck/hello-world
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
