apps/helloworld/2.helloworld-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app.kubernetes.io/instance: helloworld
    app.kubernetes.io/name: helloworld
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 8000
  type: ClusterIP
