apps/helloworld/0.helloworld.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-pod
  labels:
    app.kubernetes.io/instance: helloworld
    app.kubernetes.io/name: helloworld
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: helloworld
      app.kubernetes.io/name: helloworld
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: helloworld
        app.kubernetes.io/name: helloworld
    spec:
      containers:
        - name: helloworld
          image: crccheck/hello-world
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app.kubernetes.io/instance: helloworld
    app.kubernetes.io/name: helloworld
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - "hello.k8s.edu.local"
      secretName: hello-tls
  rules:
    - host: "hello.k8s.edu.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 9000
