apps/helloworld/4.helloworld-ing-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
#    cert-manager.io/cluster-issuer: ca-issuer
spec:
  tls:
    - hosts:
        - "hello.k8s.edu.local"
      secretName: hello-tls
  rules:
    - host: "hello.k8s.edu.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 9000
